# farm-project

./: .gitignore  Procfile  pyproject.toml  requirement.txt  requirements.txt
api/: farm.db  requirements.txt
api/app/: __init__.py  config.py  farm.db
api/app/models/: models.py
api/app/routes/: main.py
app/: __init__.py  farm.db  forms.py  models.py
app/main/: routes.py
app/models/: models.py
app/routes/: main.py
app/templates/: base.html  crear_grupo.html  crear_variable.html  create_pen.html  create_variable.html  editar_grupo.html  editar_variable.html  index.html
client/: package-lock.json  package.json
client/src/: App.jsx  index.css  main.jsx
client/src/components/Forms/CreateField/: CreateField.jsx  ModalField.jsx  ModalReport.jsx
client/src/components/Forms/CreateMeasurement/: CreateMeasurement.jsx
client/src/components/Forms/CreatePen/: CreatePen.jsx
client/src/components/Forms/CreateVariable/: CreateVariable.jsx
client/src/components/Forms/EditAttribute/: EditAttribute.jsx
client/src/components/Forms/EditModalMeasurement/: EditModalMeasurement.jsx
client/src/components/Forms/EditPen/: EditPen.jsx
client/src/components/Forms/ModalMeasurements/: ModalMeasurements.jsx
client/src/components/Forms/ModalReport/: ModalReport.jsx
client/src/components/Forms/NewAttribute/: NewAttribute.jsx
client/src/components/Loader/: Loader.jsx  loader.css
client/src/components/ModalAlert/: ModalAlert.jsx
client/src/components/NavBar/: NavBarr.jsx
client/src/utils/: messageToast.js
instance/: mi_base_de_datos.db  mi_proyecto.db
(+5 files in other folders)
