[tool.poetry]
name = "farm-project"
version = "0.1.0"
description = ""
authors = ["Mariano Dominguez <marianodominguez@cliniciannexus.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.2"
flask-sqlalchemy = "^3.1.1"
flask-wtf = "^1.2.1"
wtforms = "^3.1.2"
wtforms-ext = "^0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
